--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: Test
-on: [push]
+name: Unit Tests
+on: [push, pull_request]
 jobs:
 
   test:
-    name: Test
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
 
@@ -16,5 +16,5 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Test
+    - name: Run Tests
       run: go test -v -count=1 ./...
