Added tests for our templates
We now have tests for our templates to ensure that the output looks th
way we expect it.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,6 +5,7 @@ engines:
     - "**/"                # exclude all
     - "!./cmd/"            # unexclude just the ones we want to lint
     - "!./pkg/"
+    - "!./templates/"
 
   gofmt:
     enabled: true
