Update wording to indicate that it's not just unit tests run on GH pushes
We change the wording of some of the workflow metadata to indicate that
we run both integration and unit tests as part of the actions. We also
now include better testing info in the CONTRIBUTING documentation.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Tests
 on: [push, pull_request]
 
 env:
@@ -6,7 +6,7 @@ env:
 
 jobs:
   test:
-    name: Unit Tests
+    name: Tests
     runs-on: ubuntu-latest
 
     steps:
