Make tests only run once for PRs
Previously we ran the tests for pushes and PR actions on all branches
which ended up in two test runs when a PR was worked on. This new chagne
ensures that we run tests only on pushes to master and separately for PR
operatons like opening, updating, and reopening.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,16 @@
 name: Tests
-on: [push, pull_request]
+on:
+  # Only run this on pushes to master
+  push:
+    branches:
+    - master
+
+  # And when PRs operations are done
+  pull_request:
+    types:
+    - opened
+    - reopened
+    - synchronize
 
 env:
   CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
