--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -3,7 +3,7 @@ name: Release tests
 on: push
 
 jobs:
-  create-cluster:
+  release-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.13
@@ -14,18 +14,15 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
 
-      - name: Create k8s Kind Cluster
+      - name: Create k8s KinD Cluster
         uses: helm/kind-action@v1.0.0-alpha.3
 
-      - uses: azure/setup-helm@v1
+      - name: Install Helm
+        uses: azure/setup-helm@v1
 
-      - name: Setup Helm Repos
+      - name: Add Helm 'stable' repository
         run: helm repo add stable https://kubernetes-charts.storage.googleapis.com/ && helm repo update
 
-      - name: Setup Authenticator Test Case
+      - name: Run releases test
         working-directory: ./test
-        run: ./up.sh
-
-      - name: Run Tests
-        working-directory: ./test
-        run: RELEASE_TESTS=1 go test -v -count=1 ./...
+        run: ./test
