--- a/pkg/repositories/testdata/repositories.yml
+++ b/pkg/repositories/testdata/repositories.yml
@@ -12,6 +12,7 @@ section:
         version: Repo1 Version
         after: Repo1 After Version
         upgrade_url: Repo1 Upgrade Url
+        certification: Repo1 Certification
       - name: Repo2 Name
         url: Repo2 URL
         description: Repo2 Description
@@ -24,3 +25,4 @@ section:
         description: Repo3 Description
         version: Repo3 Version
         upgrade_url: Repo3 Upgrade Url
+        certification: Repo3 Certification
