test secretless instead of authenticator

--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -24,5 +24,5 @@ jobs:
         run: helm repo add stable https://kubernetes-charts.storage.googleapis.com/ && helm repo update
 
       - name: Run releases test
-        working-directory: ./test
+        working-directory: ./release-testing
         run: ./test
