Added conjur-oss-suite-release pre-existing go exclusions
Signed-off-by: Andy Tinkham <andy.tinkham@cyberark.com>

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -44,6 +44,11 @@ plugins:
   # Go
   gofmt:
     enabled: true
+    exclude_patterns:
+      - "**/"         # exclude all
+      - "!./cmd/"     # ynexclude just the ones we want to lint
+      - "!./pkg/"
+      - "!./templates"
   golint:
     enabled: true
   govet:
