Renamed `release.yml` -> `draft-release.yml` GitHub action
Since we don't really publish the release with this action, we now have
abetter name as to its function.

--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -4,7 +4,7 @@ on:
     tags:
       - 'v*'
 
-name: Create Release
+name: Create Draft Release
 jobs:
   # This job name must match the `needs` field in `release` step
   run-tests:
