Ensured that E2E tests only run on master branch and on PRs
Without this, we would needlesly run the E2E tests on all pushes to all
branches.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,6 +1,17 @@
 name: E2E Tests
 
-on: push
+on:
+  # Only run this on pushes to master
+  push:
+    branches:
+    - master
+
+  # And when PRs operations are done
+  pull_request:
+    types:
+    - opened
+    - reopened
+    - synchronize
 
 jobs:
   release-tests:
