Fixed draft-release action when parsing output files
Old code had the worng release notes path that is now fixed and allws us
to get further in the flow.

--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Capture release notes into a variable
       id: release_notes
       run: |
-        CONTENT=$(cat RELEASE_NOTES.md)
+        CONTENT=$(cat tmp_RELEASE_NOTES.md)
         echo "::set-output name=content::${CONTENT//$'\n'/%0A}"
 
     - name: Create Release
