--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -14,7 +14,8 @@ on:
     - synchronize
 
 jobs:
-  release-tests:
+  e2e-tests:
+    name: Run E2E Tests
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.13
