We now commit the release suite.yml file to branch `suite_<version>`
Since we can't push to master branch, we have to push to a diffrent
branch. We still need to automate opening a PR though.

--- a/.github/workflows/release-publish-suite-commit.yml
+++ b/.github/workflows/release-publish-suite-commit.yml
@@ -66,4 +66,4 @@ jobs:
 
     - name: Push files
       run: |
-        git push "https://${{ github.actor }}:${{secrets.GITHUB_TOKEN}}@github.com/${{ github.repository }}.git" HEAD:master
+        git push "https://${{ github.actor }}:${{secrets.GITHUB_TOKEN}}@github.com/${{ github.repository }}.git" "HEAD:suite_${version}"
