Logging levels for E2E tests
Using some redirection it's possible to selectively log steps in the release test scripts. This makes it possible to have info logs on stdout and debug logs on file. The debug logs can be consulted on failure.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -38,3 +38,8 @@ jobs:
       - name: Run releases test
         working-directory: ./release-testing
         run: ./test
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: debug-log
+          path: ./release-testing/debug-log.txt
