Fixed suite diffing module logic
Previously, old configuration was used as the target for all updates to
the version between the two version but what we really wanted was that
the new config describes which repos we want to use and only update the
AfterVersion field on them based on the older config. This both fixed
the logic and improves the UX since we expect to have the `this` object
be the current/latest config.

--- a/pkg/repositories/testdata/repositories_current.yml
+++ b/pkg/repositories/testdata/repositories_current.yml
@@ -3,26 +3,25 @@ section:
   name: Section Name
   description: Section Description
   categories:
-    - name: Category1
-      description: Category1 Description
-      repos:
-        - name: Repo1 Name
-          url: Repo1 URL
-          description: Repo1 Description
-          version: Repo1 Version
-          after: Repo1 After Version
-          upgrade_url: Repo1 Upgrade Url
-          certification: Repo1 Certification
-        - name: Repo2 Name
-          url: Repo2 URL
-          description: Repo2 Description
-          version: Repo2 Version
-    - name: Category2
-      description: Category2 Description
-      repos:
-        - name: Repo3 Name
-          url: Repo3 URL
-          description: Repo3 Description
-          version: Repo3 Version
-          upgrade_url: Repo3 Upgrade Url
-          certification: Repo3 Certification
+  - name: Category1
+    description: Category1 Description
+    repos:
+      - name: Repo1 Name
+        url: Repo1 URL
+        description: Repo1 Description
+        version: Repo1 New Version
+        upgrade_url: Repo1 Upgrade Url
+        certification: Repo1 Certification
+      - name: Repo2 Name
+        url: Repo2 URL
+        description: Repo2 Description
+        version: Repo2 New Version
+  - name: Category2
+    description: Category2 Description
+    repos:
+      - name: Repo3 Name
+        url: Repo3 URL
+        description: Repo3 Description
+        version: Repo3 Version
+        upgrade_url: Repo3 Upgrade Url
+        certification: Repo3 Certification
