--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -25,6 +25,8 @@ plugins:
 
   fixme: # Flags any FIXME, TODO, BUG, XXX, HACK comments so they can be fixed
     enabled: true
+    issue_override:
+       severity: info  # Don't fail PRs for FIXME tags, but still flag them
     config:
       strings:
       - FIXME
