--- a/suite.yml
+++ b/suite.yml
@@ -18,6 +18,12 @@ section:
         description: Helm chart for deploying Conjur OSS.
         version: v1.3.8
         certification: "trusted"
+      - name: cyberark/conjur-google-cloud-marketplace
+        url: https://github.com/cyberark/conjur-google-cloud-marketplace
+        description: Google Cloud Marketplace integration for deploying Conjur OSS.
+        version: v1.2.0
+        certification: "trusted"
+        upgrade_url: https://github.com/cyberark/conjur-google-cloud-marketplace/#upgrade-the-application
 #      - name: cyberark/conjur-aws
 #        url: https://github.com/cyberark/conjur-aws
 #        description: AWS CloudFormation templates for deploying Conjur OSS.
