--- a/suite.yml
+++ b/suite.yml
@@ -10,12 +10,13 @@ section:
         url: https://github.com/cyberark/conjur
         description: Conjur OSS server. Conjur comes built-in with custom authenticators
           for Kubernetes, OpenShift, AWS IAM, OIDC, and more.
-        version: v1.5.0
+        upgrade_url: https://github.com/cyberark/conjur/blob/master/UPGRADING.md
+        version: v1.10.0
       - name: cyberark/conjur-oss-helm-chart
         url: https://github.com/cyberark/conjur-oss-helm-chart
         description: Helm chart for deploying Conjur OSS.
         upgrade_url: https://github.com/cyberark/conjur-oss-helm-chart/tree/master/conjur-oss#upgrading-modifying-or-migrating-a-conjur-oss-helm-deployment
-        version: v2.0.0
+        version: v2.0.1
 
   - name: Conjur SDK
     description: Conjur Command Line Interface (CLI) and Client Libraries
@@ -35,7 +36,7 @@ section:
       - name: cyberark/conjur-api-java
         url: https://github.com/cyberark/conjur-api-java
         description: Conjur Java Client Library
-        version: v2.2.1
+        version: v3.0.2
       - name: cyberark/conjur-api-python3
         url: https://github.com/cyberark/conjur-api-python3
         description: Conjur Python Client Library
@@ -43,7 +44,7 @@ section:
       - name: cyberark/conjur-api-ruby
         url: https://github.com/cyberark/conjur-api-ruby
         description: Conjur Ruby Client Library
-        version: v5.3.1
+        version: v5.3.4
 
   - name: Platform Integrations
     description: Tools for Conjur integrations with platforms and cloud providers.
@@ -53,14 +54,14 @@ section:
         tool: Kubernetes
         description: The Conjur authenticator client can be deployed as a sidecar
           or init container to ensure your application has a valid Conjur access token.
-        version: v0.18.0
+        version: v0.18.1
       - name: cyberark/secrets-provider-for-k8s
         url: https://github.com/cyberark/secrets-provider-for-k8s
         tool: Kubernetes
         description: The Conjur Secrets Provider for K8s is deployed as an init
           container in your application pod. It injects secrets from Conjur
           into Kubernetes secrets, which are accessible to your application pod.
-        version: v1.0.0
+        version: v1.1.0
 
   - name: DevOps Tools
     description: Conjur OSS integrations with DevOps tools.
@@ -78,7 +79,7 @@ section:
         description: Puppet module that simplifies the operation of establishing
           Conjur host identity and allows authorized Puppet nodes to fetch secrets
           from Conjur.
-        version: v2.0.2
+        version: v3.1.0
       - name: cyberark/terraform-provider-conjur
         url: https://github.com/cyberark/terraform-provider-conjur
         tool: Terraform
@@ -94,7 +95,7 @@ section:
         description: Secretless Broker can be used to securely connect your
           applications to services they need - without ever having to fetch or
           manage passwords and keys.
-        version: v1.6.0
+        version: v1.7.0
 
   - name: Summon
     description: Run your processes wrapped with Summon to ensure they have
@@ -104,24 +105,8 @@ section:
         url: https://github.com/cyberark/summon
         description: Summon is a secure tool to inject secrets into a subprocess
           environment.
-        version: v0.8.1
-      - name: cyberark/summon-aws-secrets
-        url: https://github.com/cyberark/summon-aws-secrets
-        description: Summon provider for AWS Secrets Manager.
-        version: v0.3.0
-      - name: cyberark/summon-chefapi
-        url: https://github.com/cyberark/summon-chefapi
-        description: Summon provider for Chef encrypted data bags.
-        version: v0.1.1
+        version: v0.8.3
       - name: cyberark/summon-conjur
         url: https://github.com/cyberark/summon-conjur
         description: Summon provider for Conjur.
         version: v0.5.3
-      - name: cyberark/summon-keyring
-        url: https://github.com/cyberark/summon-keyring
-        description: Summon provider for cross-platform keyrings.
-        version: v0.2.1
-      - name: cyberark/summon-s3
-        url: https://github.com/cyberark/summon-s3
-        description: Summon provider for AWS S3.
-        version: v0.2.0
