Add suite.yml Description to docs release output
We'd like to be able to publish some "What's new" type content with each
suite release, so in this commit I've repurposed the suite Description to
be a Description of what's new in the release. This gets added to the beginning
of the HTML release notes in its own paragraph.

--- a/pkg/cli/testdata/suite.yml
+++ b/pkg/cli/testdata/suite.yml
@@ -1,6 +1,7 @@
 ---
 section:
   name: Conjur OSS Suite Release
+  version: 1.2.3
   description: These are the primary repositories for Conjur Open Source and its SDK.
   categories:
   - name: Conjur OSS Core
