--- a/pkg/cli/testdata/new_release_suite.yml
+++ b/pkg/cli/testdata/new_release_suite.yml
@@ -1,7 +1,7 @@
 ---
 section:
   name: Conjur OSS Suite Release
-  description: These are the primary repositories for Conjur Open Source and its SDK.
+  description: These are the new primary repositories for Conjur Open Source and its SDK.
   categories:
   - name: Conjur OSS Core
     description: Conjur OSS Server and Deployment Tools
