--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -43,7 +43,7 @@ jobs:
         go-version: 1.15
 
     - name: Set GIT_BRANCH
-      run: echo "::set-env name=GIT_BRANCH::${GITHUB_REF#refs/tags/}"
+      run: echo "GIT_BRANCH={GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
     - name: Add suite.yml to artifacts
       uses: actions/upload-artifact@v1
