--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set BRANCH_NAME
-      run: echo "::set-env name=GIT_BRANCH::${GITHUB_REF#refs/heads/}"
+      run: echo "GIT_BRANCH={GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
     - name: Prepare CC for reporting data
       run: |
