--- a/suite.yml
+++ b/suite.yml
@@ -11,7 +11,7 @@ section:
         description: Conjur OSS server. Conjur comes built-in with custom authenticators
           for Kubernetes, OpenShift, AWS IAM, OIDC, and more.
         upgrade_url: https://github.com/cyberark/conjur/blob/master/UPGRADING.md
-        version: v1.11.1
+        version: v1.11.2
       - name: cyberark/conjur-oss-helm-chart
         url: https://github.com/cyberark/conjur-oss-helm-chart
         description: Helm chart for deploying Conjur OSS.
@@ -49,6 +49,17 @@ section:
   - name: Platform Integrations
     description: Tools for Conjur integrations with platforms and cloud providers.
     repos:
+      - name: cyberark/cloudfoundry-conjur-buildpack
+        url: https://github.com/cyberark/cloudfoundry-conjur-buildpack
+        description: The Conjur Buildpack will use the Conjur identity provided
+          by the Conjur Service Broker to inject secrets into your application
+          environment at runtime.
+        version: v2.1.6
+      - name: cyberark/conjur-service-broker
+        url: https://github.com/cyberark/conjur-service-broker
+        description: The Conjur Service Broker provides your applications running
+          in Cloud Foundry with a Conjur identity.
+        version: v1.1.4
       - name: cyberark/conjur-authn-k8s-client
         url: https://github.com/cyberark/conjur-authn-k8s-client
         tool: Kubernetes
@@ -61,7 +72,7 @@ section:
         description: The Conjur Secrets Provider for K8s is deployed as an init
           container in your application pod. It injects secrets from Conjur
           into Kubernetes secrets, which are accessible to your application pod.
-        version: v1.1.1
+        version: v1.1.2
 
   - name: DevOps Tools
     description: Conjur OSS integrations with DevOps tools.
@@ -103,7 +114,7 @@ section:
         description: Secretless Broker can be used to securely connect your
           applications to services they need - without ever having to fetch or
           manage passwords and keys.
-        version: v1.7.1
+        version: v1.7.2
 
   - name: Summon
     description: Run your processes wrapped with Summon to ensure they have
