--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -4,7 +4,7 @@ on:
   # Only run this on pushes to master
   push:
     branches:
-    - master
+    - main
 
   # And when PRs operations are done
   pull_request:
