Change action flow to trigger on main

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -3,7 +3,7 @@ on:
   # Only run this on pushes to master
   push:
     branches:
-    - master
+    - main
 
   # And when PRs operations are done
   pull_request:
