--- a/.github/workflows/update-suite-release-pr.yml
+++ b/.github/workflows/update-suite-release-pr.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
       with:
-        ref: master
+        ref: main
 
     - name: Configure Git
       run: |
@@ -53,6 +53,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PULL_REQUEST_FROM_BRANCH: "${{ steps.data.outputs.suite_update_branch }}"
-        PULL_REQUEST_BRANCH: master
+        PULL_REQUEST_BRANCH: main
         PULL_REQUEST_TITLE: "Action: Update suite release file for v${{ steps.data.outputs.suite_version }}"
         PULL_REQUEST_BODY: "Auto-generated PR!"
